<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7 Wonders Timer</string>
    <string name="action_settings">Settings</string>
    <string name="initial_time">00:45</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="initial_round">Round 1</string>
    <string name="stage_empty"></string>
    <string name="skip">Skip</string>
    <string name="stage_choose">choose your card</string>
    <string name="stage_play">play your card</string>
    <string name="timer_title">Board Game Timer</string>
    <string name="reset_age">Reset Age</string>

</resources>
